# filecats

./: README.md
backend/: Cargo.toml  Dockerfile
backend/src/: broadcast.rs  game.rs  main.rs  types.rs
frontend/: .eslintrc  Dockerfile  package.json  webpack.config.js
frontend/nginx/: default.conf
frontend/src/: app.ts  index.html
frontend/src/app/: CatEntity.ts  FileEntity.ts  Game.ts  documentEvents.ts  socket.ts  styles.ts  utils.ts
frontend/src/assets/: styles.css
