[package]
name = "filecats-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.18.0"
tokio = { version = "1.28.1", features = ["full"] }
bstr = "1.4.0"
futures-util = "0.3"
regex = "1"
parking_lot = "0.12.1"
rand = "0.8.5"